<resources>
    <string name="app_name">Barber Shop Schedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="login_button">Log in</string>
    <string name="home_title">Home</string>
    <string name="register_button">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="transname_barbername">barberName</string>
    <string name="transname_barberserv">barberServ</string>
    <string name="transname_barberclient">barberClient</string>
    <string name="transname_barberprom">barberProm</string>
    <string name="transname_barberdate">barberDate</string>
    <string name="transname_barberaddress">barberAddr</string>
    <string name="transname_barberdesc">barberDesc</string>
    <string name="transname_barberimg">barberImage</string>
    <string name="transname_servicename">serviceName</string>
    <string name="transname_serviceprice">servicePrice</string>
    <string name="transname_serviceduration">serviceDuration</string>
    <string name="update_title_alert">Update</string>
    <string name="next_appointment">Next appointments</string>
    <string name="promotions">Promotions</string>
    <string name="barber_service_button">Services</string>
    <string name="barber_new_service_button">New Service</string>
    <string name="barber_service_creation_name">Service name</string>
    <string name="barber_service_creation_price">Service price</string>
    <string name="barber_service_creation_duration">Service duration</string>
    <string name="barber_service_creation_description">Service description</string>
    <string name="delete_service_dialog">Are you sure you want to delete your service?</string>
    <string name="delete_service_dialog_title">Warning</string>
    <string name="update_service_dialog">Are you sure you want to update your service?</string>
    <string name="barber_promotion_button">Promotions</string>
    <string name="barber_new_promotion_button">New Promotion</string>
    <string name="barber_promotion_creation_name">Promotion name</string>
    <string name="barber_promotion_creation_description">Promotion description</string>
    <string name="barber_promotion_creation_service">Promotion service</string>
    <string name="barber_promotion_creation_is_promotional">Promotional</string>
    <string name="transname_promotionname">promotionName</string>
    <string name="transname_promotiondescription">promotionDescription</string>
    <string name="transname_promotionservice">promotionService</string>
    <string name="delete_promotion_dialog">Are you sure you want to delete your promotion?</string>
    <string name="delete_promotion_dialog_title">Warning</string>
    <string name="update_promotion_dialog">Are you sure you want to update your promotion?</string>
    <string name="barber_create_button">Create</string>
    <string name="barber_update_button">Update</string>
    <string name="barber_delete_button">Delete</string>
    <string name="barber_cancel_button">Cancel</string>
    <string name="barber_schedule_button">Schedule</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general_information">General information</string>
    <string name="schedule">Schedule</string>
    <string name="prices_and_promotions">Prices/Promotions</string>
    <string name="prices">Prices</string>
    <string name="show_barbers">Show barbers</string>
    <string name="title_activity_price_detail">PriceDetailActivity</string>
    <string name="title_activity_barber_service_prices">Prices</string>
    <string name="title_activity_barber_free_hours">Free Hours</string>
    <string name="services">Services</string>
    <string name="new_appointment">New appointment</string>
    <string name="appointment_client_name">Client name</string>
    <string name="appointment_date">Appointment date</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="guest">Guest</string>
    <string name="unavailable_date">Date unavailable</string>
    <string name="unavailable_time">Selected time unavailable</string>
    <string name="service_duration">Minutes</string>
    <string name="service_price_currency">$</string>
    <string name="title_activity_barber_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Save name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="savePreferences" />
    <string name="accept">Accept</string>
    <string name="image">Image</string>
    <string name="user">User</string>
    <string name="barber">Barber</string>
    <string name="field_error">All fields are required</string>
    <string name="field_duration_error">The duration of a service must be multiple of 15 (15,30,45,...)</string>
    <string name="double_back">Click BACK again to exit</string>
    <string name="barber_shop_rating">Rating</string>
    <string name="barber_shop_rate">Rate</string>
    <string name="barber_review_edit">Edit</string>
    <string name="barber_shop_location_show_on_map">Show on map</string>
    <string name="new_review_hint">Add your review...</string>
    <string name="rate_barber_shop_now">Rate now barber shop</string>
    <string name="cancel_button">Cancel</string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="publish_button">Publish</string>
    <string name="accept_button">Accept</string>
    <string name="delete_review_dialog">Are you sure you want to delete your review?</string>
    <string name="delete_review_dialog_title">Warning</string>
    <string name="rating_1">Very bad</string>
    <string name="rating_2">Bad</string>
    <string name="rating_3">Normal</string>
    <string name="rating_4">Good</string>
    <string name="rating_5">Very good</string>
    <string name="people_reviews">Reviews</string>
    <string name="free_hour_click_title">Warning</string>
    <string name="free_hour_click_dialog" formatted="false">Are you sure you want to create an appointment for %1$s for the %2$s at %3$s?</string>
    <string name="delete_appointment_dialog">Are you sure you want to delete that appointment?</string>
    <string name="delete_appointment_dialog_title">Warning</string>
    <string name="appointment_deleted">The appointment was deleted successfully</string>
    <string name="free_hour_click_not_enough_time_title">Warning</string>
    <string name="free_hour_click_not_enough_time_dialog" formatted="false">The estimated time for %1$s is %2$s minutes, but with your selection there is only %3$s minutes at most. The appointment has to be validated by the barber shop. Do you want to continue? </string>
    <string name="title_activity_barber_update_service">BarberUpdateServiceActivity</string>
    <string name="is_promotional">Is promotional</string>
    <string name="place">Place</string>
    <string name="mode">Mode</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="select">Select</string>
    <string name="select_place">Select place</string>
    <string name="no_place">No place Selected</string>
    <string name="description">Description</string>
    <string name="age">Age</string>
    <string name="name_not_available">Username is not available</string>
    <string name="invalid_user">Invalid user or password</string>
    <string name="barber_create">Barber created successfully</string>
    <string name="client_create">Client created successfully</string>
    <string name="service_create">Service created successfully</string>
    <string name="promotion_create">Promotion created successfully</string>
    <string name="description_update">Description updated successfully</string>
    <string name="age_update">Age updated successfully</string>
    <string name="name_update">Name updated successfully</string>
    <string name="email_update">Email updated successfully</string>
    <string name="phone_update">Phone updated successfully</string>
    <string name="password_update">Password updated successfully</string>
    <string name="gender_update">Gender updated successfully</string>
    <string name="place_update">Place updated successfully</string>
    <string name="service_update">Your service was updated successfully</string>
    <string name="promotion_update">Your promotion was updated successfully</string>
    <string name="service_delete">Your service was deleted successfully</string>
    <string name="promotion_delete">Your promotion was deleted successfully</string>
    <string name="no_promotion">There isn\'t promotion</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_service_details">Service Details Activity</string>
    <string name="promotional_title">Promotional</string>
    <string name="promotional">Checking this option, the promotion will be visible in the home of the clients.\nYou will have a charge of 5€ in your credit card.</string>
    <string name="remove_service">Remove this service will remove the next elements:\n</string>
    <string name="remove_promotion">Remove this promotion will remove the next elements:\n</string>
    <string name="no_data">No data associated.\n</string>
    <string name="default_notification_channel_id">default</string>
    <string name="pending_appointments">Pending appointments</string>
    <string name="notification_type_request_appointment">Appointment request</string>
    <string name="no_promo">No promotion</string>
</resources>