<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/show_schedule"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/schedule" />
        <item
            android:id="@+id/show_services"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/services" />
        <item
            android:id="@+id/show_promotions"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:title="@string/promotions" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
