<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udl.bss.barbershopschedule.BarberNewServiceActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/barber_service_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/barber_service_creation_name"
            />

        <EditText
            android:id="@+id/barber_service_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/barber_service_creation_description"
            />

        <EditText
            android:id="@+id/something3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Something Else"
            />

        <EditText
            android:id="@+id/something4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Something Else 2"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/barber_create_button"
                />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/barber_cancel_button"
                />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
