<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="313dp"
        android:layout_height="176dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="167dp">

        <Button
            android:id="@+id/barber_schedule_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barber_schedule_button"
            android:textColor="@color/colorPrimary"
            android:theme="@style/PrimaryAccent" />

        <Button
            android:id="@+id/barber_service_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/barber_service_button"
            android:textColor="@color/colorPrimary"
            android:theme="@style/PrimaryAccent" />

        <Button
            android:id="@+id/barber_promotion_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/barber_promotion_button"
            android:textColor="@color/colorPrimary"
            android:theme="@style/PrimaryAccent" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
