<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    NOTE: EditTextPreference accepts EditText attributes.

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="save_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Change name" />


    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="save_mail"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Change E-mail" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="save_phone"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Change phone number" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="save_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Change password" />


    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="save_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Change address" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="save_city"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Change city" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="save_description"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Change description" />
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code.-->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

    <Preference android:title="Save changed data"
        android:key="@string/savePreferences"
        android:summary="Click here to save changes"/>

</PreferenceScreen>
