<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card_view:cardBackgroundColor="@color/colorPrimary"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4sp"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_cv"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription"
            android:src="@drawable/ic_star_border_white_24dp"/>

        <TextView
            android:id="@+id/service_name_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/image_cv"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:textColor="#fff"
            android:textSize="15sp"
            android:transitionName="@string/transname_barbername"/>

        <TextView
            android:id="@+id/client_name_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_name_cv"
            android:layout_toRightOf="@+id/image_cv"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:textColor="#fff"
            android:textSize="15sp"
            android:transitionName="@string/transname_barberdesc"/>

        <TextView
            android:id="@+id/promotion_name_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/client_name_cv"
            android:layout_toRightOf="@+id/image_cv"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="#fff"
            android:textSize="15sp"
            android:text="@string/no_promo"
            android:transitionName="@string/transname_barberaddress"/>

        <TextView
            android:id="@+id/date_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/promotion_name_cv"
            android:layout_toRightOf="@+id/image_cv"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="#fff"
            android:textSize="15sp"
            android:transitionName="@string/transname_barberaddress"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>